@@ -276,6 +276,8 @@ function makeEnv(opts) {
   env.error = opts.error || process.stderr;
   env.strataVersion = exports.version;
 
+  env.input.pause();
+
   return env;
 }
 
