@@ -78,11 +78,11 @@ function checkEnv(env) {
     assert(headerName.toLowerCase() === headerName, headerName + ' header must be lower-cased');
   }
 
-  // - input must be a readable Stream
+  // - input             A readable Stream of data contained in the request body
   assert(env.input instanceof Stream, 'input must be a Stream');
   assert(env.input.readable, 'input must be readable');
 
-  // - error must be a writable Stream
+  // - error             A writable Stream for error output
   assert(env.error instanceof Stream, 'error must be a Stream');
   assert(env.error.writable, 'error must be writable');
 
@@ -144,6 +144,10 @@ function checkEnv(env) {
     assert(typeof env.headers['content-length'] === 'string', 'content-length header must be a string');
     assert((/^\d+$/).test(env.headers['content-length']), 'content-length header must consist of only digits');
   }
+
+  // - input must be paused
+  // TODO: There isn't a good way to test if a stream is paused using the
+  // streams interface in node 0.8.x.
 }
 
 function checkCallback(callback) {
