@@ -1,7 +1,5 @@
 var url = require('url');
 var qs = require('querystring');
-var assert = require('assert');
-var EventEmitter = require('events').EventEmitter;
 var util = require('util');
 var BufferedStream = require('bufferedstream');
 var strata = require('./index');
@@ -38,7 +36,7 @@ function makeEnv(opts) {
     if (opts.requestMethod === 'POST' || opts.requestMethod === 'PUT') {
       opts.headers = opts.headers || {};
       opts.headers['content-type'] = 'application/x-www-form-urlencoded';
-      opts.input = new BufferedStream(qs.stringify(opts.params));
+      opts.input = qs.stringify(opts.params);
     } else {
       opts.queryString = qs.stringify(opts.params);
     }
