@@ -1,5 +1,6 @@
 = HEAD
 
+  * The input stream is paused by default.
   * strata.authenticityToken always generates a token, even on GET requests.
   * Added the ability to pass a params object to mock.env.
   * Removed the querystring module.
